mutants.out.old/log/crates__job__src__lib.rs_line_233_col_9_001.log

*** crates/job/src/lib.rs:233:9: replace Job::nodes -> &[JobNode] with Vec::leak(vec![Default::default()])

*** mutation diff:
--- crates/job/src/lib.rs
+++ replace Job::nodes -> &[JobNode] with Vec::leak(vec![Default::default()])
@@ -225,17 +225,17 @@
         &self.input_json
     }
 
     pub fn status(&self) -> JobStatus {
         self.status
     }
 
     pub fn nodes(&self) -> &[JobNode] {
-        &self.nodes
+        Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn node_status(&self, node_id: &str) -> Option<NodeRunStatus> {
         self.nodes
             .iter()
             .find(|node| node.node_id.as_str() == node_id)
             .map(JobNode::status)
     }


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=job@0.1.0
       Fresh node v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/crates/node)
       Fresh workflow v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/crates/workflow)
       Dirty job v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/crates/job): the file `crates/job/src/lib.rs` has changed (1778056982.593231756s, 3s after last build at 1778056979.496136523s)
   Compiling job v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/crates/job)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job --edition=2024 crates/job/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=08269f022a7d2b2e -C extra-filename=-551c083093ecebc5 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rlib`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job --edition=2024 crates/job/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a6a479581596090d -C extra-filename=-989a3b77c2d83e11 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rmeta --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rmeta`
error[E0277]: the trait bound `JobNode: Default` is not satisfied
   --> crates/job/src/lib.rs:233:24
    |
233 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |                        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `JobNode`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `job` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job --edition=2024 crates/job/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=08269f022a7d2b2e -C extra-filename=-551c083093ecebc5 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rlib --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `job` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name job --edition=2024 crates/job/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a6a479581596090d -C extra-filename=-989a3b77c2d83e11 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps --extern node=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libnode-ef5821e0cee689fe.rmeta --extern workflow=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-lf1Rdt.tmp/target/debug/deps/libworkflow-8f9285c1db0b2396.rmeta` (exit status: 1)

*** result: Failure(101)
